changes requested by the customer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="index.html" class="navbar-brand">
                         <!-- <span class="brand-logo"></span> -->
                         <span class="brand-text">
-                            <span class="text-theme">H1</span> CS
+                            H1CS
                         </span>
                     </a>
                 </div>
@@ -74,12 +74,12 @@
             <!-- end content-bg -->
             <!-- begin container -->
             <div class="container home-content">
-                <h1>Houston's #1 Cleaning Specialist</h1>
+                <h1>Houston's #1 Cleaning Specialist, LLC</h1>
                 <h3>“A Clean Satisfaction Guaranteed!!”</h3>
                 <h4>
-                    Our wide ranges of services enable us to be a single source for all your facility needs. We will meet all your needs and timelines trying to target your budget.
+                    Our wide range of services enable us to be a single source for all your cleaning needs. Because time is of the essence, we will focus on your expectations and timelines. We will also target your budget according to the scope of work needed.
                 </h4>
-                <a href="#" class="btn btn-theme">Call Now</a> 
+                <a href="tel:713-785-8600" class="btn btn-theme">Call Now</a> 
                 <!-- <a href="#" class="btn btn-outline">Purchase Now</a> -->
                 <br />
             </div>
@@ -96,8 +96,8 @@
                     Houston's #1 Cleaning Specialist, LLC has been providing professional construction, commercial and residential cleaning. We take great pride in our work treating all projects with the same high-level attention. We have years of experience in our respective craft.
                 </h3>
 
-                <h3 class="content-desc">Our cleaning approach is unique Houston's #1 Cleaning Specialist, LLC knows the importance of safety meeting all CDC and OSHA requirements.
-                    We go to all and any means necessary to make sure that the job gets done right the first time regardless of size or scope of work.
+                <h3 class="content-desc">Our cleaning approach is unique. Houston's #1 Cleaning Specialist, LLC knows the importance of OSHA, CDC and safety requirements per project.
+                    We go to all and any means necessary according to the scope of work regardless of site. 
                 </h3>
 
                 <!-- begin row -->
@@ -165,7 +165,7 @@
             <div class="container">
                 <h1 class="content-title">Why Choose Us</h1>
                 <h3 class="content-desc">
-                    By choosing Us you can be rest assured that your facility wil be impeccably maintained and will reflect the professional image you wish to project o your clients and employees.
+                    By choosing Us you can be rest assured that your facility wil be impeccably maintained and will reflect the professional image you wish to project to your clients and employees.
                 </h3>
                 <!-- begin row -->
                 <div class="row">
@@ -249,7 +249,9 @@
                 <div class="row">
                     <!-- begin col-12 -->
                     <div class="col-md-12 quote">
-                        We are insured and bonded, have tons of references and unlike our competitors “WE GUARANTEE OUR WORK!!”  We will be more than happy to help you on the cleaning that you may need.  Whether it is a onetime clean or recurring service, we will try to target your budget according to the scope of work.  We don’t cut corners, we clean them.
+                        We are insured and bonded, have tons of references and unlike our competitors “WE GUARANTEE OUR WORK!!”  We will be more than happy to help you on any cleaning need.  We will try to target your budget whether it is recurring service or a onetime clean.  
+                        <br>
+                        We don’t cut corners, we clean them.
                         <small>All chemicals and materials are included in the scope of work.  All liquids and chemicals are pet friendly. </small>
                     </div>
                     <!-- end col-12 -->
@@ -270,10 +272,9 @@
             <div class="container" data-animation="true" data-animation-type="fadeInDown">
                 <h1 class="content-title">Our Work</h1>
                 <h3 class="content-desc">
-                    Houston's #1 Cleaning Specialist is a leading provider
-                    of cleaning services with an outstanding reputation for quality
-                    and integrity throughout Houston and the surrounding areas.
+                    Since 2003, Houston’s #1 Cleaning Specialist, LLC has a strong reputation for quality cleaning in their industry. They provide services in Houston and all surrounding areas. 
                 </h3>
+                <h4 class="content-desc">*Window Cleaning *Carpet Cleaning *Pressure Wash *Floor Care *Staff *Laborers</h4>
                 <!-- begin row -->
                 <div class="row row-space-10">
                     <h3 class="text-theme">COMMERCIAL</h3>
@@ -344,7 +345,7 @@
                 </div>
 
                 <div class="row row-space-10">
-                    <h3 class="text-theme">RESIDENCIAL</h3>
+                    <h3 class="text-theme">RESIDENTIAL</h3>
                     <!-- begin col-3 -->
                     <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/residencial/img1.jpg" alt="">
@@ -395,19 +396,16 @@
                 <!-- begin row -->
                 <div class="row action-box">
                     <!-- begin col-9 -->
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-md-9 col-sm-7" style="display: flex; align-items: center;">
                         <div class="icon-large text-theme">
                             <i class="fa fa-phone"></i>
                         </div> 
-                        <h3>ASK FOR MORE INFORMATION!</h3>
-                        <p>
-                            An agent will assist you for a more custom service.
-                        </p>
+                        <h3>NEED MORE INFORMATION?</h3>
                     </div>
                     <!-- end col-9 -->
                     <!-- begin col-3 -->
-                    <div class="col-md-3 col-sm-3">
-                        <a href="#" class="btn btn-outline-danger btn-block">Call Now (713) 785-8600</a>
+                    <div class="col-md-3 col-sm-5">
+                        <a href="tel:713-785-8600" class="btn btn-outline-danger btn-block">Call Now (713) 785-8600</a>
                     </div>
                     <!-- end col-3 -->
                 </div>
@@ -439,9 +437,10 @@
                             Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus.
                         </p> -->
                         <h4><i class="fa fa-envelope"></i> h1cs@sbcglobal.net</h4>
-                        <h4><i class="fa fa-map-marker"></i> 9803 Harwin Dr. # D, Houston, TX 77036, Estados Unidos</h4>
+                        <h4><i class="fa fa-map-marker"></i> 9803 Harwin Dr. # D, Houston, TX 77036, United States</h4>
                         <h4><i class="fa fa-phone"></i> Office: (713) 785-8600,  Fax: (713) 785-8607</h4>
-                        <h4><i class="fa fa-clock-o"></i> Monday - Friday: 09:00 am - 05:00 pm</h4>
+                        <h4><i class="fa fa-phone"></i> Maria Hernandez 832-725-2017</h4>
+                        <h4><i class="fa fa-phone"></i> Nidia Curiel 281-804-5272</h4>
                         
                         <div class="section-container">
                             <div class="embed-responsive embed-responsive-16by9">
@@ -492,10 +491,10 @@
             <div class="container">
                 <div class="footer-brand">
                     <!-- <div class="footer-brand-logo"></div> -->
-                    Houston's #1 Cleaning Specialist
+                    Houston's #1 Cleaning Specialist, LLC
                 </div>
                 <h4 class="footer-description">
-                    &copy; Copyright Houston's #1 Cleaning Specialist - All Rights Reserved <br />
+                    &copy; Copyright Houston's #1 Cleaning Specialist, LLC - All Rights Reserved <br />
                     Created by <a href="https://www.linkedin.com/in/derys-dominguez/" target="_blank">Derys Rodriguez</a>
                 </h4>
                 <p class="social-list">
@@ -533,57 +532,3 @@
 	</script>
 </body>
 </html>
-
-<!--
-    Houston's #1 Cleaning Specialist provides excelent
-conslruction clean up services that our clients have come 0
-rely on.
-
-Houston's #1 Cleaning Specialist 1s a leading provider
-of cleaning services with an outstanding reputation for qually
-and Integr throughout Houston and the surrounding areas.
-
-For more than a dozen years we have provided nigh qualy for
-businesses of all sizes. Properly management fims, facity
-Managers and bulking owners Retail Stores. Churches, Day
-care New constuction ust Houston's #1 Cleaning
-Specialist for their most demanding clearing and janitorial
-Jobs.
-
-By choosing Us you can be rest assured that your facility wil
-be impeccably maintained and vill reflect the professional
-Image you wish fo project o your clients and employees.
-
-@Attordable Cleaning Services - Clean-up for less with
-Houston's #1 Cleaning Specialist
-
-Let our staf customize 2 cleaning service program o su your
-Individual needs and your budget Whether you requre dally
-cleaning, weekly or monihly service, of Just one-ime only
-Service, you can count on Us. for top-nolch cleaning al
-unbeatabie rates.
-
-@Experience Complete Satisfaction
-We constantly monfor our work and Should any area fal fo
-meet our stict ofice cleaning standards, & wil be conecied
-immedalely And of course, We aliays encourage cusiomer
-communication and use your input o heighten our level of
-caning services
-
-@adaitionai benef for your peace of mind
-
-Houston's #1 Cleaning Specialist is fully insured and
-bonded, providing llabity and property damage coverage as
-well as employee bonding and all other appicable forms of
-Insurance coverage.
-
-All employees are screened for your protection. They are neat
-in appearance and can proper company identification
-
-Enhance the professional of your business |
-‘eateneg roe fly Te eniy sore]
-
-Please request a free estimate or, for more information
-‘on our customized office cleaning services, call vs of
-
--->
