form changes with h1cs email

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <!-- end col-6 -->
                     <!-- begin col-6 -->
                     <div class="col-md-6 form-col" data-animation="true" data-animation-type="fadeInRight">
-                        <form class="form-horizontal" action="mailto:chino.dr16@gmail.com">
+                        <form class="form-horizontal" action="mailto:h1cs@sbcglobal.net">
                             <div class="form-group">
                                 <label class="control-label col-md-3">Name <span class="text-theme">*</span></label>
                                 <div class="col-md-9">
