--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
           </h3>
 
           <h3 class="content-desc">
-            Our cleaning approach is unique. Houston's #1 Cleaning Specialist,
-            LLC knows the importance of OSHA, CDC and safety requirements per
-            project. We go to all and any means necessary according to the scope
-            of work regardless of site.
+            We go to all and any means necessary to complete the scope of work
+            given. Our cleaning approach is unique. Houston&#39;s #1 Cleaning
+            Specialist, LLC knows the importance of OSHA, CDC and safety
+            requirements.
           </h3>
 
           <!-- begin row -->
@@ -205,14 +205,13 @@
         <div class="container">
           <h1 class="content-title">Why Choose Us</h1>
           <h3 class="content-desc">
-            By choosing Us you can be rest assured that your facility wil be
-            impeccably maintained and will reflect the professional image you
-            wish to project to your clients and employees.
+            By choosing H#1CS you can rest assure that all your cleaning expectation will be met. We love to go above and
+beyond costumer satisfaction. We are the only company that can promise “A Clean Satisfaction Guarantee!!”
           </h3>
           <!-- begin row -->
           <div class="row">
             <!-- begin col-4 -->
-            <div class="col-md-3 col-sm-3">
+            <div class="col-md-4 col-sm-4">
               <!-- begin team -->
               <div class="team">
                 <div
@@ -231,7 +230,7 @@
             </div>
             <!-- end col-4 -->
             <!-- begin col-4 -->
-            <div class="col-md-3 col-sm-3">
+            <div class="col-md-4 col-sm-4">
               <!-- begin team -->
               <div class="team">
                 <div
@@ -248,9 +247,8 @@
               </div>
               <!-- end team -->
             </div>
-            <!-- end col-4 -->
             <!-- begin col-4 -->
-            <div class="col-md-3 col-sm-3">
+            <div class="col-md-4 col-sm-4">
               <!-- begin team -->
               <div class="team">
                 <div
@@ -269,7 +267,7 @@
             </div>
             <!-- end col-4 -->
             <!-- begin col-4 -->
-            <div class="col-md-3 col-sm-3">
+            <div class="col-md-4 col-sm-4">
               <!-- begin team -->
               <div class="team">
                 <div
@@ -286,6 +284,41 @@
               </div>
               <!-- end team -->
             </div>
+            <div class="col-md-4 col-sm-4">
+              <!-- begin team -->
+              <div class="team">
+                <div
+                  class="image special"
+                  data-animation="true"
+                  data-animation-type="flipInX"
+                >
+                <a href="https://www.cityof.com/tx/houston/janitorial"><img src="https://www.cityof.com/assets/badge/cityof-com-premier-service-award-2023-small-LtIraUTy.png" alt="CityOf.com Premier Service Award - 2023" width="150" height="120" /></a>
+                </div>
+                <div class="info">
+                  <h3 class="name">CityOf.com</h3>
+                  <div class="title text-theme">Premier Service Award</div>
+                </div>
+              </div>
+              <!-- end team -->
+            </div>
+            <div class="col-md-4 col-sm-4">
+              <!-- begin team -->
+              <div class="team">
+                <div
+                  class="image special"
+                  data-animation="true"
+                  data-animation-type="flipInX"
+                >
+                <a href="https://www.bbb.org/us/tx/houston/profile/janitor-service/houston-1-cleaning-specialist-0915-31005527/#sealclick" target="_blank" rel="nofollow"><img src="https://seal-houston.bbb.org/seals/blue-seal-63-134-bbb-31005527.png" style="border: 0; width: 100%;" alt="Houston #1 Cleaning Specialist BBB Business Review" /></a>
+                </div>
+                <div class="info">
+                  <h3 class="name">Better Business Bureau</h3>
+                  <div class="title text-theme">Accreditation</div>
+                </div>
+              </div>
+              <!-- end team -->
+            </div>
+            <!-- end col-4 -->
             <!-- end col-4 -->
           </div>
           <!-- end row -->
@@ -317,8 +350,7 @@
             <div class="col-md-12 quote">
               We are insured and bonded, have tons of references and unlike our
               competitors “WE GUARANTEE OUR WORK!!” We will be more than happy
-              to help you on any cleaning need. We will try to target your
-              budget whether it is recurring service or a onetime clean.
+              to help you on any cleaning needs. We will try to target your budget according to the scope of work needed. Because details are very important.
               <br />
               We don’t cut corners, we clean them.
               <small
@@ -354,7 +386,7 @@
           </h3>
           <h4 class="content-desc">
             *Window Cleaning *Carpet Cleaning *Pressure Wash *Floor Care *Staff
-            *Laborers
+            *Labors
           </h4>
           <!-- begin row -->
           <div class="row row-space-10">
@@ -560,13 +592,16 @@
               data-animation="true"
               data-animation-type="fadeInRight"
             >
-              <form class="form-horizontal" onsubmit="sendEmail(); reset(); return false">
+              <form
+                class="form-horizontal"
+                action="mailto:h1cs@sbcglobal.net"
+              >
                 <div class="form-group">
                   <label class="control-label col-md-3"
                     >Name <span class="text-theme">*</span></label
                   >
                   <div class="col-md-9">
-                    <input type="text" class="form-control" id="client_name"/>
+                    <input type="text" class="form-control" id="client_name" />
                   </div>
                 </div>
                 <div class="form-group">
@@ -574,7 +609,7 @@
                     >Email <span class="text-theme">*</span></label
                   >
                   <div class="col-md-9">
-                    <input type="text" class="form-control" id="client_email"/>
+                    <input type="text" class="form-control" id="client_email" />
                   </div>
                 </div>
                 <div class="form-group">
@@ -582,7 +617,7 @@
                     >Phone <span class="text-theme">*</span></label
                   >
                   <div class="col-md-9">
-                    <input type="text" class="form-control" id="client_phone"/>
+                    <input type="text" class="form-control" id="client_phone" />
                   </div>
                 </div>
                 <div class="form-group">
@@ -590,7 +625,11 @@
                     >Message <span class="text-theme">*</span></label
                   >
                   <div class="col-md-9">
-                    <textarea class="form-control" rows="10" id="client_message"></textarea>
+                    <textarea
+                      class="form-control"
+                      rows="10"
+                      id="client_message"
+                    ></textarea>
                   </div>
                 </div>
                 <div class="form-group">
@@ -655,28 +694,6 @@
     <script src="assets/plugins/scrollMonitor/scrollMonitor.js"></script>
     <script src="assets/js/apps.min.js"></script>
     <!-- ================== END BASE JS ================== -->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-
-    <script>
-        const sendEmail = () => {
-            let client_name = document.getElementById("client_name").value
-            let client_email = document.getElementById("client_email").value
-            let client_phone = document.getElementById("client_phone").value
-            let client_message = document.getElementById("client_message").value
-    
-          Email.send({
-            Host: "smtp.gmail.com",
-            Username: "chino.dr16@gmail.com",
-            Password: "fogpxvitiyblfrlu",
-            // To: "h1cs@sbcglobal.net",
-            To: "chino.dr16@gmail.com",
-            From: client_email,
-            Subject: "New Contact from webpage",
-            Body: `Name: ${client_name} <br> Email: ${client_email} <br> Phone: ${client_phone} <br> ${client_message}`,
-          }).then((message) => alert(message)).catch(err => console.log(err));
-
-        }
-    </script>
     <script>
       $(document).ready(function () {
         App.init();
