changes on direction

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ beyond costumer satisfaction. We are the only company that can promise “A Clea
                         </p> -->
               <h4><i class="fa fa-envelope"></i> h1cs@sbcglobal.net</h4>
               <h4>
-                <i class="fa fa-map-marker"></i> 9803 Harwin Dr. # D, Houston,
+                <i class="fa fa-map-marker"></i> 9803 Harwin Dr. Ste D, Houston,
                 TX 77036, United States
               </h4>
               <h4>
