--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                   >HOME</a
                 >
               </li>
-              <li><a href="#about" data-click="scroll-to-target">ABOUT</a></li>
-              <li><a href="#team" data-click="scroll-to-target">WHY US</a></li>
-              <li><a href="#work" data-click="scroll-to-target">WORK</a></li>
+              <li><a href="#about" data-click="scroll-to-target">ACERCA DE</a></li>
+              <li><a href="#team" data-click="scroll-to-target">ELIGENOS</a></li>
+              <li><a href="#work" data-click="scroll-to-target">EXPLORA</a></li>
               <li>
-                <a href="#contact" data-click="scroll-to-target">CONTACT</a>
+                <a href="#contact" data-click="scroll-to-target">CONTACTO</a>
               </li>
             </ul>
           </div>
@@ -504,8 +504,8 @@
       >
         <!-- begin container -->
         <div class="container">
-          <h1 class="content-title">Contact Us</h1>
-          <h3 class="content-desc">Email us for Quotes and Estimates!</h3>
+          <h1 class="content-title">Contáctanos</h1>
+          <h3 class="content-desc">Enviános un email con tus preguntas</h3>
           <!-- begin row -->
           <div class="row">
             <!-- begin col-6 -->
@@ -518,25 +518,24 @@
                         <p>
                             Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus.
                         </p> -->
-              <h4><i class="fa fa-envelope"></i> h1cs@sbcglobal.net</h4>
+              <h4><i class="fa fa-envelope"></i>  soportetecnico@VetSystem.com  </h4>
               <h4>
-                <i class="fa fa-map-marker"></i> 9803 Harwin Dr. Ste D, Houston,
-                TX 77036, United States
+                <i class="fa fa-map-marker"></i>  Barrio Río de Piedras, San Pedro Sula
               </h4>
               <h4>
-                <i class="fa fa-phone"></i> Office: (713) 785-8600, Fax: (713)
-                785-8607
+                <i class="fa fa-phone"></i> Oficina: +504 9674-4799
               </h4>
-              <h4><i class="fa fa-phone"></i> Maria Hernandez 832-725-2017</h4>
-              <h4><i class="fa fa-phone"></i> Nidia Curiel 281-804-5272</h4>
+              <h4><i class="fa fa-phone"></i> Servicio al cliente: +504 9658-1265</h4>
+              <h4><i class="fa fa-phone"></i> Ventas: +504 9999-9997</h4>
 
               <div class="section-container">
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe
                     class="embed-responsive-item"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3465.106659174772!2d-95.5336517853967!3d29.7166695409379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c2e1905a698d%3A0x56c6a341dbda15d1!2sHouston&#39;s%20%23%201%20Cleaning%20Specialist%20LLC!5e0!3m2!1ses!2shn!4v1677687103112!5m2!1ses!2shn"
+                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1922.3455344705928!2d-88.04572189499166!3d15.5010407005787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTXCsDMwJzAzLjciTiA4OMKwMDInNDEuNiJX!5e0!3m2!1ses-419!2shn!4v1701380347904!5m2!1ses-419!2shn"
                     allowfullscreen
                   ></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1922.3456304974836!2d-88.04617636124529!3d15.501030380922018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTXCsDMwJzAzLjciTiA4OMKwMDInNDEuNiJX!5e0!3m2!1ses-419!2shn!4v1701381259477!5m2!1ses-419!2shn" allowfullscreen></iframe>
                 </div>
               </div>
             </div>
@@ -547,7 +546,7 @@
               data-animation="true"
               data-animation-type="fadeInRight"
             >
-              <form class="form-horizontal" action="mailto:h1cs@sbcglobal.net">
+              <form class="form-horizontal" action="mailto:soportetecnico@VetSystem.com ">
                 <div class="form-group">
                   <label class="control-label col-md-3"
                     >Name <span class="text-theme">*</span></label
@@ -610,7 +609,7 @@
             Houston's #1 Cleaning Specialist, LLC
           </div>
           <h4 class="footer-description">
-            &copy; Copyright Houston's #1 Cleaning Specialist, LLC - All Rights
+            &copy; Copyright El Orfanato - All Rights
             Reserved <br />
             Created by
             <a
