--- a/index.html
+++ b/index.html
@@ -343,6 +343,78 @@
         </div>
         <!-- end container -->
       </div>
+
+      <div id="team" class="content" data-scrollview="true">
+        <!-- begin container -->
+        <div class="container">
+          <h1 class="content-title">Casos de Éxito</h1>
+          <h3 class="content-desc">
+            Descubre cómo VetSystem ha transformado la gestión veterinaria y ha impulsado el éxito de clínicas en Honduras. Estos son algunos de nuestros casos de éxito:
+          </h3>
+          <!-- begin row -->
+          <div class="row">
+            <!-- begin col-4 -->
+            <div class="col-md-4 col-sm-4">
+              <!-- begin team -->
+              <div class="team">
+                <div
+                  class="image"
+                  data-animation="true"
+                  data-animation-type="flipInX"
+                >
+                  <img src="assets/img/person1.jpg" alt="Ryan Teller" />
+                </div>
+                <div class="info">
+                  <h5 class="name">"La implementación de VetSystem revolucionó nuestra atención. Ahora, podemos acceder instantáneamente a los historiales médicos, coordinar agendas sin conflictos y mantener un inventario eficiente. La eficacia se traduce en un mejor cuidado para nuestras mascotas y clientes satisfechos." - Dr. Carlos Mendoza, Gerente Hospitalario.</h5>
+                  <div class="title text-theme">Hospital "Patas Saludables"</div>
+                </div>
+              </div>
+              <!-- end team -->
+            </div>
+            <!-- end col-4 -->
+            <!-- begin col-4 -->
+            <div class="col-md-4 col-sm-4">
+              <!-- begin team -->
+              <div class="team">
+                <div
+                  class="image"
+                  data-animation="true"
+                  data-animation-type="flipInX"
+                >
+                  <img src="assets/img/person2.jpg" alt="Jonny Cash" />
+                </div>
+                <div class="info">
+                  <h5 class="name">"VetSystem no solo mejoró nuestra eficiencia, sino que también fortaleció nuestra conexión con los clientes. Las alertas automáticas de citas y las facturas detalladas han aumentado la transparencia y la confianza. Ahora, cada visita es una experiencia sin complicaciones tanto para el personal como para nuestros clientes." - Sra. Mark Gutiérrez, Propietario.</h5>
+                  <div class="title text-theme">Clínica "Amigos Peludos"</div>
+                </div>
+              </div>
+              <!-- end team -->
+            </div>
+            <!-- begin col-4 -->
+            <div class="col-md-4 col-sm-4">
+              <!-- begin team -->
+              <div class="team">
+                <div
+                  class="image"
+                  data-animation="true"
+                  data-animation-type="flipInX"
+                >
+                  <img src="assets/img/person3.jpg" alt="Mia Donovan" />
+                </div>
+                <div class="info">
+                  <h5 class="name">"VetSystem ha sido la clave de nuestro crecimiento. Antes, la gestión era un desafío constante, pero con VetSystem, todo se simplificó. Desde la administración de citas hasta la facturación, cada aspecto fluye sin esfuerzo. Nuestros clientes notan la diferencia, y nosotros también." - Dr. Anuar Sánchez, Veterinaria.</h5>
+                  <div class="title text-theme">Clínica "PetCare Excellence"</div>
+                </div>
+              </div>
+              <!-- end team -->
+            </div>
+            <!-- end col-4 -->
+            <!-- end col-4 -->
+          </div>
+          <!-- end row -->
+        </div>
+        <!-- end container -->
+      </div>
       <!-- end #team -->
 
       <!-- begin #quote -->
