--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             a día. Descubre cómo VetSystem puede potenciar tu práctica
             veterinaria y mejorar la atención a tus pacientes peludos.
           </h4>
-          <a href="tel:713-785-8600" class="btn btn-theme">Call Now</a>
+          <a href="tel:9674-4799" class="btn btn-theme">Call Now</a>
           <!-- <a href="#" class="btn btn-outline">Purchase Now</a> -->
           <br />
         </div>
@@ -552,9 +552,9 @@
             <!-- begin col-3 -->
             <div class="col-md-3 col-sm-5">
               <a
-                href="tel:713-785-8600"
+                href="tel:9674-4799"
                 class="btn btn-outline-danger btn-block"
-                >Call Now (713) 785-8600</a
+                >Call Now +504 9674-4799</a
               >
             </div>
             <!-- end col-3 -->
@@ -678,7 +678,7 @@
         <div class="container">
           <div class="footer-brand">
             <!-- <div class="footer-brand-logo"></div> -->
-            Houston's #1 Cleaning Specialist, LLC
+            VetSystem, El Orfanato
           </div>
           <h4 class="footer-description">
             &copy; Copyright El Orfanato - All Rights
